--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -39,7 +39,8 @@
           <version>3.1</version>
           
           <configuration>
-
+                 <source>1.8</source>
+                <target>1.8</target>
                 <fork>true</fork>
                 <executable>C:\Program Files\Java\jdk1.8.0_91\bin\javac</executable>
             
