--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -11,7 +11,7 @@
              <plugin> 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.3</version>
           
              <configuration>
              
@@ -54,6 +54,9 @@
 </dependency>
     <!-- https://mvnrepository.com/artifact/net.rcarz/jira-client -->  
   </dependencies>
+         <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
   <repositories>
             <repository>
