--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -18,6 +18,9 @@
 
                 <fork>true</fork>
                 <executable>C:\Program Files\Java\jdk1.8.0_91\bin\javac</executable>
+                 <compilerVersion>1.8</compilerVersion>
+                   <source>1.8</source>
+                    <target>1.8</target>
             
          </configuration>
        </plugin>
