--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -6,43 +6,18 @@
     <groupId>com.xpand.java</groupId>
     <artifactId>xpand-test</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-             <plugin> 
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-          
-             <configuration>
-             
-
-                
-                
-                 <compilerVersion>1.8</compilerVersion>
-                   <source>1.8</source>
-                    <target>1.8</target>
-                      <fork>true</fork>
-            
-         </configuration>
-       </plugin>
-             
-            <plugin>
- 
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version> 2.20.1</version>
- 
-                <configuration>
- 
-                    <suiteXmlFiles>
-                      <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
- 
-                </configuration>
-             </plugin>
-        </plugins>
-    </build>
+         
+         <properties>
+      <!-- This property will be set by the Maven Dependency plugin -->
+      <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+  </properties>
+  
   <dependencies>
+   <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker</artifactId>
+        <version>1.9.4</version>
+    </dependency>
   
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -79,4 +54,36 @@
             </plugin>
         </plugins>
     </reporting>
+           <build>
+        <plugins>
+             <plugin> 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+          
+             <configuration>
+                 <compilerVersion>1.8</compilerVersion>
+                   <source>1.8</source>
+                    <target>1.8</target>
+                      <fork>true</fork>
+            
+         </configuration>
+       </plugin>
+             
+            <plugin>
+ 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version> 2.20.1</version>
+ 
+                <configuration>
+ 
+                    <suiteXmlFiles>
+                      <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+ 
+                </configuration>
+             </plugin>
+        </plugins>
+    </build>
 </project>
