--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -49,7 +49,7 @@
 	  </execution>
 	</executions>
 	<configuration>
-	  <mainClass>com.xpand.DemoTest</mainClass>
+	  <mainClass>com.xpand.DemoTest.java</mainClass>
 	  <arguments>
 	    <argument>argument1</argument>
 	  </arguments>
@@ -68,7 +68,7 @@
 	    <configuration>
 	      <transformers>
 		<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-		  <mainClass>com.xpand.DemoTest</mainClass>
+		  <mainClass>com.xpand.DemoTest.java</mainClass>
 		</transformer>
 	      </transformers>
 	    </configuration>
