--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -34,6 +34,24 @@
         <artifactId>jdk8</artifactId>
         <version>1.9.4</version>
     </dependency>
+	  <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>3.141.59</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.1.0</version>
+    <scope>compile</scope>
+</dependency>
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.1.0</version>
+    <scope>compile</scope>
+</dependency>
   </dependencies>
   <build>
     <plugins>
