--- a/Xray/pom.xml
+++ b/Xray/pom.xml
@@ -122,6 +122,20 @@
               </compilerArgs>
           </configuration>
       </plugin>
+	    <plugin>
+ 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version> 2.20.1</version>
+ 
+                <configuration>
+ 
+                    <suiteXmlFiles>
+                      <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+ 
+                </configuration>
+             </plugin>
     </plugins>
   </build>
 </project>
